Changed the way the plots are created (now using LaTeX terminal).

--- a/assignment-14.org
+++ b/assignment-14.org
@@ -30,6 +30,7 @@
           org-src-fontify-natively t
           org-latex-custom-lang-environments '((maxima "maxima"))
           org-babel-latex-htlatex "htlatex")
+  
   (defmacro by-backend (&rest body)
       `(cl-case (when (boundp 'backend) (org-export-backend-name backend))
          ,@body))
@@ -38,11 +39,18 @@
 #+RESULTS:
 : by-backend
 
+#+NAME: fname
+#+HEADER: :var f="dummy"
+#+BEGIN_SRC emacs-lisp :export none
+  (format "\"%s/%s\"" (file-name-directory (buffer-file-name)) f)
+#+END_SRC
+
 #+BEGIN_LATEX
   \definecolor{codebg}{rgb}{0.96,0.99,0.8}
   \lstnewenvironment{maxima}{%
     \lstset{backgroundcolor=\color{codebg},
       aboveskip=20pt,
+      showstringspaces=false,
       frame=single,
       framerule=0pt,
       basicstyle=\ttfamily\scriptsize,
@@ -67,32 +75,42 @@
     
     Hence $\Dom(f) = \{x \in \mathbb{R} \; | \; \frac{\pi}{4} < x \bmod \frac{\pi}{2}
     < \frac{\pi}{2}\}$.
-
+    
     #+NAME: prob1
     #+HEADER: :exports source
-    #+HEADER: :var %out="\"/home/wvxvw/Documents/uni/infinitesimal-calculus/tangent_x.pdf\""
-    #+HEADER: :var %command="\"set term pdfcairo color solid lw 3 size 10.2 cm, 6.2 cm font \\\",18\\\"\"";
+    #+HEADER: :var %out=fname(f="tangent_x.tex")
     #+BEGIN_SRC maxima :results output raw
       programmode: false;
-      gnuplot_pdf_command: %command;
-      print(plot2d (tan(x),
-        [x, -2 * %pi, 2 * %pi], [y, -3, 3], grid2d,
-        [xtics, 0.25 * %pi, %pi, 1.5 * %pi],
-        [ytics, 1, 1, 1], [label, ["(0, 0)", -1.4, 0.4]],
-        [title, "Tangent curve"], [pdf_file, %out]));
+      print (plot2d (tan(x),
+          [x, -2 * %pi, 2 * %pi], [y, -3, 3],
+          [gnuplot_pdf_term_command, 
+           "set term cairolatex standalone pdf size 16cm,10.5cm"],
+          [gnuplot_postamble,
+           "set arrow from pi/4,-3 to pi/4,3 nohead
+            set arrow from pi*5/4,-3 to pi*5/4,3 nohead
+            set arrow from -2*pi,1 to 2*pi,1 nohead"],
+          [ytics, 1, 1, 1], [xtics, 0, 1, 0],
+          [label, ["${\\displaystyle \\frac{\\pi}{4}}$", 1.4, 2.4],
+                  ["${\\displaystyle \\frac{5\\pi}{4}}$", 3.2, 2.4]],
+          [title, "Tangent curve"], [pdf_file, %out]));
     #+END_SRC
 
-    #+begin_src emacs-lisp :var maxima-output=prob1() :results file :exports results
-      (replace-regexp-in-string
-       "[] ]+$" ""
-       (replace-regexp-in-string
-        "^\\s-+" ""
-        (car (reverse (split-string maxima-output "\n")))))
-    #+end_src
+    #+HEADER: :results raw file :exports results
+    #+BEGIN_SRC emacs-lisp :var maxima-output=prob1(%out=fname(f="tangent_x.tex"))
+      (let ((tex (replace-regexp-in-string
+                  "[] ]+$" ""
+                  (replace-regexp-in-string
+                   "^\\s-+" ""
+                   (car (reverse (split-string maxima-output "\n")))))))
+        (shell-command
+         (format "latexmk -pdflatex='pdflatex -shell-escape -interaction nonstopmode' -pdf -f %s"
+                       tex))
+        (format "%s.pdf" (file-name-sans-extension tex)))
+    #+END_SRC
 
-    #+ATTR_LATEX: :width 0.7\textwidth
+    #+ATTR_LATEX: :width 0.9\textwidth
     #+RESULTS:
-    [[file:/home/wvxvw/Documents/uni/infinitesimal-calculus/tangent_x.pdf]]
+    [[file:/home/wvxvw/Documents/uni/infinitesimal-calculus//tangent_x.pdf]]
 
 *** Answer 2
     Both functions attain the same values at 0 and $\frac{\pi}{4}$.  But sine is
@@ -103,29 +121,42 @@
     
     #+NAME: prob2
     #+HEADER: :exports source
-    #+HEADER: :var %out="\"/home/wvxvw/Documents/uni/infinitesimal-calculus/abstangent_x.pdf\""
-    #+HEADER: :var %command="\"set term pdfcairo color solid lw 3 size 10.2 cm, 6.2 cm font \\\",18\\\"\"";
+    #+HEADER: :var %out=fname(f="abstangent_x.tex")
     #+BEGIN_SRC maxima :results output raw
       programmode: false;
       gnuplot_pdf_command: %command;
       print(plot2d ([abs(tan(x)), sin(2 * x)],
-        [x, -2 * %pi, 2 * %pi], [y, -1.5, 3], grid2d,
-        [xtics, 0.25 * %pi, 0.75 * %pi, 1.5 * %pi],
-        [ytics, 1, 1, 1], [label, ["(0, 0)", -1.4, 0.4]],
-        [title, "Tangent curve"], [pdf_file, %out]));
+          [x, -2 * %pi, 2 * %pi], [y, -1.5, 3],
+          [gnuplot_pdf_term_command, 
+           "set term cairolatex standalone pdf size 16cm,10.5cm"],
+          [gnuplot_postamble,
+           "set arrow from pi/4,-1.5 to pi/4,3 nohead
+            set arrow from pi,-1.5 to pi,3 nohead
+            set arrow from -2*pi,1 to 2*pi,1 nohead
+            set key spacing 1.8 left bottom"],
+          [xtics, 0, 1, 0], [ytics, 1, 1, 1],
+          [label, ["${\\displaystyle \\frac{\\pi}{4}}$", 1.4, 2.1],
+                  ["${\\displaystyle \\pi}$", 3.4, 2.1]],
+          [title, "Tangent curve intersecting with sine curve"],
+          [pdf_file, %out]));
     #+END_SRC
-    
-    #+begin_src emacs-lisp :var maxima-output=prob2() :results file :exports results
-      (replace-regexp-in-string
-       "[] ]+$" ""
-       (replace-regexp-in-string
-        "^\\s-+" ""
-        (car (reverse (split-string maxima-output "\n")))))
-    #+end_src
 
-    #+ATTR_LATEX: :width 0.7\textwidth
+    #+HEADER: :results raw file :exports results
+    #+BEGIN_SRC emacs-lisp :var maxima-output=prob2(%out=fname(f="abstangent_x.tex"))
+      (let ((tex (replace-regexp-in-string
+                  "[] ]+$" ""
+                  (replace-regexp-in-string
+                   "^\\s-+" ""
+                   (car (reverse (split-string maxima-output "\n")))))))
+        (shell-command
+         (format "latexmk -pdflatex='pdflatex -shell-escape -interaction nonstopmode' -pdf -f %s"
+                       tex))
+        (format "%s.pdf" (file-name-sans-extension tex)))
+    #+END_SRC
+
+    #+ATTR_LATEX: :width 0.9\textwidth
     #+RESULTS:
-    [[file:/home/wvxvw/Documents/uni/infinitesimal-calculus/abstangent_x.pdf]]
+    [[file:/home/wvxvw/Documents/uni/infinitesimal-calculus//abstangent_x.pdf]]
 
 ** Problem 2
    Let $f$, $g$ and $h$ be functions from $\mathbb{R}$ to $\mathbb{R}$.
